hello-world-Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    app: hello-world
    env: development
spec:
  containers:
    - name: hello-world
      image: dockercloud/hello-world
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
