hello-world-Ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: hello-world.ianis
      http:
        paths:
          - backend:
              service:
                name: hello-world
                port:
                  number: 80
            path: /
            pathType: Prefix
